--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,14 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"/>
+        android:text="Button POST"/>
+
+    <Button
+        android:id="@+id/buttonPATCH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button PATCH"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
